<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather_bg"
    tools:context=".WeatherActivity">

    <TextView
        android:id="@+id/tv_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cityName"
        android:textSize="50sp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"/>

    <ImageView
        android:id="@+id/iv_weather_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_foreground"
        android:background="@drawable/weather_qing"
        android:layout_below="@id/tv_city_name"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/tv_city_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="20sp"
        android:layout_toEndOf="@id/iv_weather_img"
        android:layout_below="@id/tv_city_name"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/tv_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:textSize="20sp"
        android:layout_toEndOf="@id/iv_weather_img"
        android:layout_below="@id/tv_city_temperature"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/tv_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PM2.5"
        android:textSize="20sp"
        android:layout_toEndOf="@id/iv_weather_img"
        android:layout_below="@id/tv_wind"
        android:layout_marginStart="30dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tv_weather_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_weather_img"
        android:layout_marginStart="-106dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/tv_city_name"
        android:text="@string/weatherSum"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/btn_city_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Beijing"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btn_city_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/XiaMen"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            />
        <Button
            android:id="@+id/btn_city_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QuanZhou"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>



</RelativeLayout>