<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="25dp"
            android:layout_marginLeft="10dp"
            android:textColor="#000"
            >

        </TextView>
        <EditText
            android:id="@+id/homeUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="25dp"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="25dp"
            android:layout_marginLeft="10dp"
            android:textColor="#000"
            >
        </TextView>
        <EditText
            android:id="@+id/homePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/logout"
            android:layout_gravity="center"
            android:textSize="25dp"
            ></Button>

    </LinearLayout>
</LinearLayout>