<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


<!--圆角组件-->
    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="0dp"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/user_header">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="账户:"
            android:textSize="25dp"
            android:layout_marginLeft="10dp"
            android:textColor="#000"
            >

        </TextView>
        <EditText
            android:id="@+id/userText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="25dp"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密码:"
            android:textSize="25dp"
            android:layout_marginLeft="10dp"
            android:textColor="#000"
            >

        </TextView>
        <EditText
            android:id="@+id/lgPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="25dp"
            android:inputType="textPassword"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textSize="25dp"
            ></Button>
        <Button
            android:id="@+id/registerBtn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:layout_gravity="center"
            android:textSize="25dp"
            ></Button>
        <Button
            android:id="@+id/shopBtn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/shop"
            android:layout_gravity="center"
            android:textSize="25dp"
            ></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tipText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>